--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,19 @@
 body{
     background-color: #2500f6;
 }
+
+/* 
+    Selector {
+        property: value
+    }
+*/
 .container{ 
     background-color: #209708;
     color: rgb(1, 3, 38);
     width: 400px;
-    height: 250px;
+    /* height: 250px; */
     border-style: solid;
+    padding: 10px;
     
 }
 
@@ -23,6 +30,7 @@ border-color: black;}
          margin-left: 100px;
          margin-top: 70px;
          font-weight: bold;
+         margin-bottom: 10px;
 }
    
 .label{
@@ -30,4 +38,7 @@ border-color: black;}
     font-weight: bolder;
     font-size: large;
 
-}         
+}     
+.res {
+    text-align: justify;
+}    
